[tool.poetry]
name = "somedependency"
version = "0.1.0"
description = ""
authors = ["foo <foo@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = { version = "*", optional = true }
pyhumps = { version = "*", optional = true }

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
extrasdev = ["attrs", "pyhumps"]
extrasruntime = ["attrs"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
